syntax = "proto3";

package airsettle.airsettle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "airsettle/airsettle/params.proto";

option go_package = "github.com/airchains-network/airsettle/x/airsettle/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/airchains-network/airsettle/airsettle/params";
  
  }
  
  // Queries a list of VerificationKey items.
  rpc VerificationKey (QueryVerificationKeyRequest) returns (QueryVerificationKeyResponse) {
    option (google.api.http).get = "/airchains-network/airsettle/airsettle/verification_key/{id}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryVerificationKeyRequest {
  string id = 1;
}

message QueryVerificationKeyResponse {
  string vkey = 1;
}

